# cu-ece303

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  flake.nix  pyproject.toml  requirements.txt
p1/: client.py  server.py
