[build-system]
requires      = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name        = 'cu-ece303'
description = 'The Cooper Union - ECE 303: Communication Networks'
version     = '0.0.0'

authors = [
	{name = 'Jacob Koziej', email = 'jacobkoziej@gmail.com'},
]
license = {'text' = 'GPL-3.0-or-later'}
classifiers = [
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]

requires-python = '>=3.12'
dependencies = [
]

[project.optional-dependencies]
dev = [
	'black',
	'mdformat-gfm',
	'pip-tools',
	'pre-commit',
	'ruff',
]

[tool.black]
line-length               = 79
skip-string-normalization = true

[tool.pip-tools]
allow-unsafe    = true
generate-hashes = true
strip-extras    = false
upgrade         = true
verbose         = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.packages.find]
exclude = ['*']
